# BunnyModelViewer

./: .gitattributes  .gitignore  CMakeLists.txt
assets/model/: plane.ply
assets/model/bunny/: bunny.mtl
assets/model/bunny_texture/: bunny.mtl
assets/shader/: depth_shadow_fragment.glsl  depth_shadow_geometry.glsl  lamp_fragment.glsl  light_fragment.glsl  model_color_fragment.glsl  model_fragment.glsl  model_line_fragment.glsl  model_over_fragment.glsl  model_over_point_fragment.glsl  model_point_fragment.glsl  model_vertex.glsl
dependencies/include/GLFW/: glfw3.h
dependencies/include/assimp/: SGSpatialSort.h  SpatialSort.h  camera.h  light.h  mesh.h
dependencies/include/glad/: glad.h
dependencies/include/glm/detail/: _features.hpp  _swizzle.hpp
dependencies/include/glm/gtc/: quaternion.hpp
dependencies/include/glm/gtx/: io.inl  quaternion.inl
dependencies/include/imgui/: imgui.h  imgui_internal.h
dependencies/src/: glad.c
src/: MainRender.cpp  MainRender.h  MainWindow.cpp  MainWindow.h  camera.h  main.cpp
src/util/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  Image.cpp  LightFactory.cpp  LightFactory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLRender.h  OpenGLWindow.cpp  OpenGLWindow.h  RayPicker.cpp  RayPicker.h  ShaderProgram.cpp  ShaderProgram.h
src/util/event/: Event.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  enum.cpp  enum.h
src/util/event/eventbus/: Bus.hpp  CMakeLists.txt  EventBus.hpp  Listener.hpp
src/util/event/eventbus/cmake/: InstallHelp.cmake
src/util/event/eventbus/internal/: ListenerAttorney.hpp
src/util/event/eventbus/perk/: PassPerk.cpp  PerkEventBus.hpp  TagPerk.hpp
src/util/event/eventbus/permission/: PostponeBus.hpp
src/util/event/eventbus/stream/: ProtectedEventStream.hpp
src/util/opengl/: Camera.h  Image.cpp  Image.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLRender.h  OpenGLWindow.cpp  OpenGLWindow.h  Polygon.cpp  Polygon.h  PolygonPoint.cpp  PolygonPoint.h  PolygonTriangle.cpp  PolygonTriangle.h  ShaderProgram.cpp  ShaderProgram.h
